add alias for status

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,5 +17,6 @@
         r = !git reset && git status
 	cleanall = !git clean -f -d && git status
 	logg = !git log --graph --oneline --decorate
+	s = ! git status
 [hub]
 	protocol = https
