added jlog alias for git log

--- a/.gitconfig
+++ b/.gitconfig
@@ -17,5 +17,7 @@
         r = !git reset && git status
 	cleanall = !git clean -f -d && git status
 	logg = !git log --graph --oneline --decorate
+	jlog = !git logg --pretty='format:%C(auto)%cs %<(120,trunc)%s%h %D%cd' --date=relative
+
 [hub]
 	protocol = https
